--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,69 @@
+* {
+  box-sizing: border-box;
+}
 
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+.row {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.todo-header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    'heading toggle'
+    'input input';
+  justify-content: center;
+  align-items: center;
+  padding: 80px;
+}
+
+.heading {
+  grid-area: heading;
+}
+
+.toggle {
+  grid-area: toggle;
+  justify-self: end;
+}
+
+.todo-input {
+  grid-area: input;
+}
+
+.todo-input input {
+  width: 100%;
+}
