--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,120 @@
+/**********
+CSS RESET 
+**********/
 * {
   box-sizing: border-box;
 }
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
+/**********
+CUSTOM CSS 
+**********/
 .container {
   width: 100%;
   padding-right: 15px;
@@ -39,6 +152,25 @@
   margin-left: -15px;
 }
 
+button {
+  cursor: pointer;
+  display: inline-block;
+  color: #212529;
+  text-align: center;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+body {
+  background-color: #fafafa;
+}
+
 .todo-header {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -49,10 +181,19 @@
   justify-content: center;
   align-items: center;
   padding: 80px;
+  background-color: grey;
+}
+
+.todo-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 80px 0 80px;
 }
 
 .heading {
   grid-area: heading;
+  font-size: 40px;
 }
 
 .toggle {
@@ -62,8 +203,90 @@
 
 .todo-input {
   grid-area: input;
+  margin-top: 35px;
 }
 
 .todo-input input {
   width: 100%;
+  display: block;
+  padding: 10px 24px;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #9495a5;
+  background-color: #fff;
+  border: 1px solid #e3e4f1;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.todo-btn {
+  border-radius: 50%;
+  height: 24px;
+  width: 24px;
+  border: 1px solid #e3e4f1;
+  margin-right: 14px;
+}
+
+.todo-list {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas:
+    'todo-item todo-item'
+    'todo-filters todo-filters';
+  margin-top: -35px;
+  border-radius: 0.25rem;
+  background-color: #fff;
+}
+
+.todo-item {
+  grid-area: todo-item;
+  display: flex;
+  align-items: center;
+  padding: 10px 24px;
+  border-bottom: 1px solid #e3e4f1;
+}
+
+.todo-filters {
+  width: 100%;
+  grid-area: todo-filters;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-areas: 'text text . all active completed . clear clear clear';
+  align-items: center;
+  padding: 24px 10px;
+  font-size: 14px;
+}
+
+.todo-filters__text {
+  grid-area: text;
+  font-size: 14px;
+  padding: 0;
+}
+
+.todo-filters__all {
+  grid-area: all;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 0;
+}
+
+.todo-filters__active {
+  grid-area: active;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 0;
+}
+
+.todo-filters__completed {
+  grid-area: completed;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 0;
+}
+
+.todo-filters__clear {
+  grid-area: clear;
+  font-size: 14px;
+  padding: 0;
 }
