--- a/src/App.css
+++ b/src/App.css
@@ -280,12 +280,10 @@ button {
   margin-top: -35px;
   border-radius: 0.25rem;
   background-color: #fff;
-  box-shadow: 0px 0px 35px #c2c3d6;
 }
 
 .dark .todo-list {
   background-color: #25273d;
-  box-shadow: 0px 0px 35px #000;
 }
 
 .todo-item {
@@ -308,6 +306,13 @@ button {
   padding: 10px;
   border-bottom-left-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
+  background-color: #fff;
+  box-shadow: 0px 15px 20px #c2c3d6;
+}
+
+.dark .todo-filters {
+  background-color: #25273d;
+  box-shadow: 0px 15px 20px #000;
 }
 
 .todo-filters__text,
