--- a/src/App.css
+++ b/src/App.css
@@ -181,7 +181,7 @@ button {
     'input input';
   justify-content: center;
   align-items: center;
-  padding: 80px 0;
+  padding: 40px 0;
 }
 
 .todo-main {
@@ -204,6 +204,7 @@ button {
 .todo-input {
   grid-area: input;
   margin-top: 35px;
+  margin-bottom: 15px;
 }
 
 .todo-input input {
